--- a/.github/workflows/triillium-readme-version-update.yml
+++ b/.github/workflows/triillium-readme-version-update.yml
@@ -5,11 +5,11 @@ name: Update README with Version
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
-  # Runs on a schedule
-  schedule:
-    # This runs at 06:00 UTC every day.
-    - cron: '0 6 * * *'
+
+  # Triggers the workflow on push events but only for the build.yaml file
+  push:
+    paths:
+      - 'trillium/build.yaml'
 
 jobs:
   update-readme:
