--- a/.github/workflows/triillium-readme-version-update.yml
+++ b/.github/workflows/triillium-readme-version-update.yml
@@ -41,18 +41,19 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version extracted: $VERSION"
 
-    - name: Update README.md with version
+    - name: Update trillium/README.md with version
       # This step only runs if a version was successfully extracted
       if: env.VERSION
       run: |
         # The placeholder in your README that will be replaced.
-        # Example: # TriliumNext Notes for Home Assistant Version: VERSION_PLACEHOLDER
+        # Example: TriliumNext Notes for Home Assistant Version: VERSION_PLACEHOLDER
         PLACEHOLDER="VERSION_PLACEHOLDER"
 
         # Use sed to find and replace the placeholder with the actual version.
         # The use of a different delimiter for sed (#) avoids conflicts if the version contains slashes.
-        sed -i "s#${PLACEHOLDER}#${{ env.VERSION }}#g" README.md
-        echo "README.md updated."
+        # --- CORRECTED PATH HERE ---
+        sed -i "s#${PLACEHOLDER}#${{ env.VERSION }}#g" trillium/README.md
+        echo "trillium/README.md updated."
 
 
     - name: Commit changes
@@ -62,12 +63,12 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         
-        # Check if there are changes to commit
-        if ! git diff --quiet README.md; then
-          echo "Changes detected in README.md. Committing..."
-          git add README.md
+        # Check if there are changes to commit, specifically in trillium/README.md
+        if ! git diff --quiet trillium/README.md; then
+          echo "Changes detected in trillium/README.md. Committing..."
+          git add trillium/README.md
           # Use the env context to access the version variable in the commit message
-          git commit -m "Docs: Update README with version ${{ env.VERSION }}"
+          git commit -m "Docs: Update README in trillium/ with version ${{ env.VERSION }}"
           git push
         else
           echo "No changes to commit."
