--- a/.github/workflows/triillium-readme-version-update.yml
+++ b/.github/workflows/triillium-readme-version-update.yml
@@ -43,8 +43,8 @@ jobs:
         # Replace the old format with the new format
         # Old: TriliumNext Notes for Home Assistant Version: v0.95.0
         # New: TriliumNext Notes Version: v0.95.0 for Home Assistant
-        sed -i -E "s#TriliumNext Notes for Home Assistant Version: v[0-9]+\.[0-9]+\.[0-9]+#TriliumNext Notes Version: v${{ env.VERSION }} for Home Assistant#g" trillium/README.md
-        echo "trillium/README.md updated with version v${{ env.VERSION }}."
+        sed -i -E "s#TriliumNext Notes for Home Assistant Version: v[0-9]+\.[0-9]+\.[0-9]+#TriliumNext Notes Version: ${{ env.VERSION }} for Home Assistant#g" trillium/README.md
+        echo "trillium/README.md updated with version ${{ env.VERSION }}."
 
     - name: Commit changes
       if: env.VERSION
@@ -55,7 +55,7 @@ jobs:
         if ! git diff --quiet trillium/README.md; then
           echo "Changes detected in trillium/README.md. Committing..."
           git add trillium/README.md
-          git commit -m "Docs: Update README in trillium/ with version v${{ env.VERSION }}"
+          git commit -m "Docs: Update README in trillium/ with version ${{ env.VERSION }}"
           git push
         else
           echo "No changes to commit."
