--- a/.github/workflows/triillium-readme-version-update.yml
+++ b/.github/workflows/triillium-readme-version-update.yml
@@ -1,10 +1,7 @@
 name: Update README with Version
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-  # Triggers the workflow on push events but only for the build.yaml file
   push:
     paths:
       - 'trillium/build.yaml'
@@ -14,48 +11,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: List files for debugging
-      run: |
-        echo "Current directory: $(pwd)"
-        echo "Contents of 'trillium' directory:"
-        ls -al trillium/
+      - name: List files for debugging
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Contents of 'trillium' directory:"
+          ls -al trillium/
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
 
-    - name: Parse version from build.yaml
-      id: parse_version
-      run: |
-        # Extract version from the 'amd64:' line in build.yaml
-        VERSION=$(grep 'amd64:' trillium/build.yaml | awk -F ':' '{print $3}' | xargs)
-        
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Version extracted: $VERSION"
+      - name: Parse version from build.yaml
+        id: parse_version
+        run: |
+          VERSION=$(grep 'amd64:' trillium/build.yaml | awk -F ':' '{print $3}' | xargs)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Version extracted: $VERSION"
 
-    - name: Update trillium/README.md with version
-      if: env.VERSION
-      run: |
-        # Replace the old format with the new format
-        # Old: TriliumNext Notes for Home Assistant Version: v0.95.0
-        # New: TriliumNext Notes Version: v0.95.0 for Home Assistant
-        sed -i -E "s#TriliumNext Notes for Home Assistant Version: v[0-9]+\.[0-9]+\.[0-9]+#TriliumNext Notes Version: ${{ env.VERSION }} for Home Assistant#g" trillium/README.md
-        echo "trillium/README.md updated with version ${{ env.VERSION }}."
+      - name: Update trillium/README.md with version
+        if: env.VERSION
+        run: |
+          sed -i -E "s#TriliumNext Notes for Home Assistant Version: v[0-9]+\.[0-9]+\.[0-9]+#TriliumNext Notes Version: ${VERSION} for Home Assistant#g" trillium/README.md
+          echo "trillium/README.md updated with version ${VERSION}."
 
-    - name: Commit changes
-      if: env.VERSION
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        
-        if ! git diff --quiet trillium/README.md; then
-          echo "Changes detected in trillium/README.md. Committing..."
-          git add trillium/README.md
-          git commit -m "Docs: Update README in trillium/ with version ${{ env.VERSION }}"
-          git push
-        else
-          echo "No changes to commit."
+      - name: Commit changes
+        if: env.VERSION
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          if ! git diff --quiet trillium/README.md; then
+            echo "Changes detected in trillium/README.md. Committing..."
+            git add trillium/README.md
+            git commit -m "Docs: Update README in trillium/ with version ${VERSION}"
+            git push
+          else
+            echo "No changes to commit."
