--- a/.github/workflows/trillium-version-update.yml
+++ b/.github/workflows/trillium-version-update.yml
@@ -1,4 +1,4 @@
-name: Trillium Update Upstream Version
+name: TrilliumNext Update Upstream Version
 
 on:
   workflow_dispatch:
@@ -12,16 +12,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install yq
-        run: sudo apt-get update && sudo apt-get install -y yq
-
-      - name: Get latest release metadata from triliumnext/notes
+      - name: Get latest release metadata from trillium/notes
         id: get_release
         uses: actions/github-script@v7
         with:
           script: |
             const res = await github.rest.repos.getLatestRelease({
-              owner: 'triliumnext',
+              owner: 'trillium',
               repo: 'notes'
             });
             core.setOutput("tag", res.data.tag_name);
@@ -38,7 +35,8 @@ jobs:
           LATEST_VERSION: ${{ steps.get_release.outputs.tag }}
         run: |
           ADDON_DIR="./trillium"
-          CURRENT_VERSION=$(yq '.version' "$ADDON_DIR/config.yaml")
+          # Extract current version from config.yaml
+          CURRENT_VERSION=$(sed -n 's/^version: *"\?\([^"]*\)"\?/\1/p' "$ADDON_DIR/config.yaml")
 
           echo "Current: $CURRENT_VERSION | Latest: $LATEST_VERSION"
 
@@ -51,8 +49,8 @@ jobs:
             jq --arg v "$LATEST_VERSION" --arg d "$TODAY" \
               '.upstream_version = $v | .last_update = $d' "$ADDON_DIR/updater.json" > tmp && mv tmp "$ADDON_DIR/updater.json"
 
-            # Update config.yaml version (fixed with -y for YAML output)
-            yq e -i -y ".version = \"$LATEST_VERSION\"" "$ADDON_DIR/config.yaml"
+            # Update config.yaml version using sed
+            sed -i 's/^version:.*$/version: "'"$LATEST_VERSION"'"/' "$ADDON_DIR/config.yaml"
 
             # Update build.yaml image versions
             sed -i "s|docker.io/triliumnext/notes:.*|docker.io/triliumnext/notes:$LATEST_VERSION|g" "$ADDON_DIR/build.yaml"
@@ -69,3 +67,4 @@ jobs:
           else
             echo "No update needed"
           fi
+        shell: /usr/bin/bash -e {0}
