--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -20,17 +20,18 @@ map:
   - type: data
     read_only: false
     path: /data/trilium-data  # This needs to point to /data, where you have your persistent storage
-ports:
-  "8080/tcp": 8080
+ports: {}
 options:
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
+  expose_port: true  # Set this to false to disable port exposure
 schema:
   timezone: |
     list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
+  expose_port: "bool"  # A boolean option to control port exposure
 environment:
   TRILIUM_DATA_DIR: "/data/trilium-data"  # Use /data for persistent data storage
   USER_UID: "1000"
