--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,5 +1,5 @@
 ---
-name: "TriliumNext Notes"
+name: "TriliumNext Notes"More actions
 version: "v0.95.0"
 slug: trilium_next
 description: "Hierarchical note-taking application with encryption, Markdown support, and personal knowledge base features"
@@ -20,28 +20,19 @@ map:
   - type: data
     read_only: false
     path: /data/trilium-data  # This needs to point to /data, where you have your persistent storage
-ports: {}
+ports:
+  "8080/tcp": 8080
 options:
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
-  expose_port: true  # Set this to false to disable port exposure
-  tril_issuer_base_url: ""
-  tril_base_url: ""
-  tril_client_id: ""
-  tril_client_secret: ""
-  tril_issuer_name: ""
+
 schema:
   timezone: |
     list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
-  expose_port: "bool"  # A boolean option to control port exposure
-  tril_issuer_base_url: "str?"
-  tril_base_url: "str?"
-  tril_client_id: "str?"
-  tril_client_secret: "str?"
-  tril_issuer_name: "str?"
+
 environment:
   TRILIUM_DATA_DIR: "/data/trilium-data"  # Use /data for persistent data storage
   USER_UID: "1000"
