--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,5 +1,5 @@
 ---
-name: "TriliumNext Notes"More actions
+name: "TriliumNext Notes"
 version: "v0.95.0"
 slug: trilium_next
 description: "Hierarchical note-taking application with encryption, Markdown support, and personal knowledge base features"
@@ -26,13 +26,11 @@ options:
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
-
 schema:
   timezone: |
     list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
-
 environment:
   TRILIUM_DATA_DIR: "/data/trilium-data"  # Use /data for persistent data storage
   USER_UID: "1000"
