--- a/trillium/Dockerfile
+++ b/trillium/Dockerfile
@@ -1,14 +1,17 @@
+# ARG to define the base image (make sure this is set when building)
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-# Set shell
+# Set the default shell to sh
 SHELL ["/bin/sh", "-c"]
 
-# Copy data for add-on
-COPY run.sh /
-RUN chmod a+x /run.sh
+# Copy the run.sh script into the container's root directory
+COPY run.sh /run.sh
 
-# Install Node.js and npm if not already present in base image
+# Make sure the run.sh script is executable
+RUN chmod +x /run.sh
+
+# Install Node.js and npm if they are not already present
 RUN if ! command -v node > /dev/null 2>&1; then \
         apk add --no-cache nodejs npm; \
     fi
@@ -17,15 +20,15 @@ RUN if ! command -v node > /dev/null 2>&1; then \
 RUN addgroup -g 1000 node 2>/dev/null || true && \
     adduser -D -s /bin/sh -u 1000 -G node node 2>/dev/null || true
 
-# Create necessary directories and set permissions (focus on /data only)
+# Create necessary directories and set appropriate permissions (focus on /data)
 RUN mkdir -p /data/tmp /data/log /data/trilium-data && \
     chown -R 1000:1000 /data && \
     chmod -R 755 /data
 
-# Add volume declaration
+# Declare the volume for persistent storage
 VOLUME ["/data"]
 
-# Home Assistant requires these labels
+# Home Assistant required labels
 LABEL \
     io.hass.name="TriliumNext Notes" \
     io.hass.description="Hierarchical note-taking application" \
@@ -33,12 +36,12 @@ LABEL \
     io.hass.type="addon" \
     io.hass.arch="${BUILD_ARCH}"
 
-# Expose the port
+# Expose port 8080 (this is for documentation; actual port exposure is handled by Home Assistant)
 EXPOSE 8080
 
-# Health check
+# Health check to ensure the service is running correctly
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s \
   CMD wget --quiet --tries=1 --spider http://localhost:8080/ || exit 1
 
-# Set entrypoint
+# Set the entry point to the run.sh script
 ENTRYPOINT ["/run.sh"]
