--- a/.github/workflows/build-omada.yml
+++ b/.github/workflows/build-omada.yml
@@ -18,15 +18,6 @@ jobs:
         run: |
           curl -sSL https://raw.githubusercontent.com/mbentley/docker-omada-controller/master/Dockerfile.v5.x -o Dockerfile.upstream
 
-      - name: Fetch required scripts and files from upstream repo
-        run: |
-          curl -sSL https://raw.githubusercontent.com/mbentley/docker-omada-controller/master/healthcheck.sh -o healthcheck.sh
-          curl -sSL https://raw.githubusercontent.com/mbentley/docker-omada-controller/master/install.sh -o install.sh
-          curl -sSL https://raw.githubusercontent.com/mbentley/docker-omada-controller/master/entrypoint.sh -o entrypoint.sh
-          mkdir -p mbentley
-          curl -sSL https://raw.githubusercontent.com/mbentley/docker-omada-controller/master/mbentley/install.sh -o mbentley/install.sh
-          curl -sSL https://raw.githubusercontent.com/mbentley/docker-omada-controller/master/mbentley/entrypoint-5.x.sh -o mbentley/entrypoint-5.x.sh
-
       - name: Create custom Dockerfile
         run: |
           echo 'FROM mbentley/ubuntu:20.04' > Dockerfile
@@ -43,7 +34,7 @@ jobs:
           echo 'ARG ARCH=amd64' >> Dockerfile
           echo 'ARG NO_MONGODB=false' >> Dockerfile
           echo '' >> Dockerfile
-          echo 'RUN /install.sh && rm -f /install.sh' >> Dockerfile
+          echo 'RUN chmod +x /install.sh && /install.sh && rm -f /install.sh' >> Dockerfile
           echo '' >> Dockerfile
           echo 'WORKDIR /opt/tplink/EAPController/lib' >> Dockerfile
           echo 'EXPOSE 29810/udp 29811 29812 29813' >> Dockerfile
