--- a/.github/workflows/build-omada.yml
+++ b/.github/workflows/build-omada.yml
@@ -59,5 +59,11 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:latest ./homeassistant-addons/omada-controller
+          docker build \
+            --build-arg ARCH=amd64 \
+            --build-arg TARGETARCH=amd64 \
+            --build-arg BUILD_ARCH=amd64 \
+            --platform linux/amd64 \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:latest \
+            ./homeassistant-addons/omada-controller
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:latest
