--- a/omada-controller/config.yaml
+++ b/omada-controller/config.yaml
@@ -2,7 +2,7 @@
 name: Omada Controller Stable - JB
 image: jeakob/custom-omada:latest
 version: 5.15.24.17
-slug: omada-controller
+slug: omada_controller
 description: TP-Link Omada Controller software
 webui: https://[HOST]:[PORT:8043]
 startup: application
