--- a/.github/workflows/build-omada.yml
+++ b/.github/workflows/build-omada.yml
@@ -66,14 +66,19 @@ EOF
 
       - name: Build and push Docker image
         run: |
+          echo "INSTALL_VER=$INSTALL_VER"
+
           docker build \
             --build-arg ARCH=amd64 \
             --build-arg TARGETARCH=amd64 \
             --build-arg BUILD_ARCH=amd64 \
             --platform linux/amd64 \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:$INSTALL_VER \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:latest \
+            -t $DOCKERHUB_USERNAME/custom-omada:$INSTALL_VER \
+            -t $DOCKERHUB_USERNAME/custom-omada:latest \
             ./homeassistant-addons/omada-controller
 
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:$INSTALL_VER
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/custom-omada:latest
+          docker push $DOCKERHUB_USERNAME/custom-omada:$INSTALL_VER
+          docker push $DOCKERHUB_USERNAME/custom-omada:latest
+        env:
+          INSTALL_VER: ${{ env.INSTALL_VER }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
